Updates to branding and contact info.

--- a/media.html
+++ b/media.html
@@ -8,6 +8,10 @@
     <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="static/css/common.css" rel="stylesheet" />
     <link href="static/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="static/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="static/css/brands.min.css" rel="stylesheet" />
+    <link href="static/css/solid.min.css" rel="stylesheet" />
+
 </head>
 <body>
 <div id="wrap">
@@ -26,10 +30,13 @@
         <div class="navbar-inner">
             <a class="brand">Designed By Sane Method &copy; 2013</a>
             <div class="shareIcons">
+
                 <a target="_blank" href="http://www.youtube.com/user/NathanielKeefer">
-                    <div id="youtube" class="shareIcon"></div></a>
-                <a target="_blank" href="https://www.facebook.com/nathaniel.keefer.50">
-                    <div id="facebook" class="shareIcon"></div></a>
+                    <i class="fa-brands fa-youtube-square"></i>
+                </a>
+                <a target="_blank" href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
+                    <i class="fa-brands fa-linkedin-square"></i>
+                </a>
             </div>
             <div class="pull-right">
                 <ul class="nav">
@@ -41,6 +48,5 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
