--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,18 @@
     <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="static/css/common.css" rel="stylesheet" />
     <link href="static/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="static/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="static/css/brands.min.css" rel="stylesheet" />
+    <link href="static/css/solid.min.css" rel="stylesheet" />
 
     <script type="text/javascript" src="static/lib/jquery/jquery-1.9.1.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $('#mailtoLink').on('click', function(event){
+                event.preventDefault();
+                window.location = atob($(this).attr('href'));
+            });
+            $('#telLink').on('click', function(event){
                 event.preventDefault();
                 window.location = atob($(this).attr('href'));
             });
@@ -26,19 +33,19 @@
             <div class="span8 offset2 hero-unit" style="margin-top:50px; margin-bottom:50px;">
                 <h3>Contact Details</h3>
                 <p>
-                    <img src="static/img/res/phoneIcon.png" />
-                    <a href="tel:16475219116">Cell: 1-647-521-9116</a>
+                    <i class="fa-solid fa-phone">
+                    <a id="telLink" href="dGVsOjE2NDc3NjIxNjEz">Call Me</a>
                 </p>
                 <p>
-                    <img src="static/img/res/emailIcon.png" />
+                    <i class="fa-solid fa-envelope">
                     <a id="mailtoLink" href="bWFpbHRvOmV2ZW50aG9yaXhvbkBnbWFpbC5jb20=">Email Me</a>
                 </p>
                 <p>
-                    <img src="static/img/res/fbbfIcon.png" />
-                    <a href="https://www.facebook.com/nathaniel.keefer.50">Facebook</a>
+                    <i class="fa-brands fa-linkedin-square">
+                    <a href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">LinkedIn</a>
                 </p>
                 <p>
-                    <img src="static/img/res/ytbIcon.png" />
+                    <i class="fa-brands fa-youtube-square">
                     <a href="http://www.youtube.com/user/NathanielKeefer">Youtube</a>
                 </p>
             </div>
@@ -50,10 +57,13 @@
         <div class="navbar-inner">
             <a class="brand">Designed By Sane Method &copy; 2013</a>
             <div class="shareIcons">
+
                 <a target="_blank" href="http://www.youtube.com/user/NathanielKeefer">
-                    <div id="youtube" class="shareIcon"></div></a>
-                <a target="_blank" href="https://www.facebook.com/nathaniel.keefer.50">
-                    <div id="facebook" class="shareIcon"></div></a>
+                    <i class="fa-brands fa-youtube-square"></i>
+                </a>
+                <a target="_blank" href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
+                    <i class="fa-brands fa-linkedin-square"></i>
+                </a>
             </div>
             <div class="pull-right">
                 <ul class="nav">
