--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="static/css/common.css" rel="stylesheet" />
     <link href="static/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link href="static/lib/bselect/bootstrap-select.min.css" rel="stylesheet" />
+    <link href="static/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="static/css/brands.min.css" rel="stylesheet" />
+    <link href="static/css/solid.min.css" rel="stylesheet" />
 
     <script type="text/javascript" src="static/lib/jquery/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="static/lib/bootstrap/js/bootstrap.min.js"></script>
@@ -55,10 +58,13 @@
         <div class="navbar-inner">
             <a class="brand">Designed By Sane Method &copy; 2013</a>
             <div class="shareIcons">
+
                 <a target="_blank" href="http://www.youtube.com/user/NathanielKeefer">
-                    <div id="youtube" class="shareIcon"></div></a>
-                <a target="_blank" href="https://www.facebook.com/nathaniel.keefer.50">
-                    <div id="facebook" class="shareIcon"></div></a>
+                    <i class="fa-brands fa-youtube-square"></i>
+                </a>
+                <a target="_blank" href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
+                    <i class="fa-brands fa-linkedin-square"></i>
+                </a>
             </div>
             <div class="pull-right">
                 <ul class="nav">
@@ -70,6 +76,5 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
