--- a/contact.html
+++ b/contact.html
@@ -33,19 +33,19 @@
             <div class="span8 offset2 hero-unit" style="margin-top:50px; margin-bottom:50px;">
                 <h3>Contact Details</h3>
                 <p>
-                    <i class="fa-solid fa-phone">
+                    <i class="fa-solid fa-phone"></i>
                     <a id="telLink" href="dGVsOjE2NDc3NjIxNjEz">Call Me</a>
                 </p>
                 <p>
-                    <i class="fa-solid fa-envelope">
+                    <i class="fa-solid fa-envelope"></i>
                     <a id="mailtoLink" href="bWFpbHRvOmV2ZW50aG9yaXhvbkBnbWFpbC5jb20=">Email Me</a>
                 </p>
                 <p>
-                    <i class="fa-brands fa-linkedin-square">
+                    <i class="fa-brands fa-linkedin-square"></i>
                     <a href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">LinkedIn</a>
                 </p>
                 <p>
-                    <i class="fa-brands fa-youtube-square">
+                    <i class="fa-brands fa-youtube-square"></i>
                     <a href="http://www.youtube.com/user/NathanielKeefer">Youtube</a>
                 </p>
             </div>
