Update footer share icons and linkedin reference.

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                 <p>
 
                     <a href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
-                        <i class="fa-brands fa-linkedin-square"></i>
+                        <i class="fa-brands fa-linkedin"></i>
                         LinkedIn
                     </a>
                 </p>
@@ -71,7 +71,7 @@
                     <i class="fa-brands fa-youtube-square"></i>
                 </a>
                 <a target="_blank" href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
-                    <i class="fa-brands fa-linkedin-square"></i>
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </div>
             <div class="pull-right">
