--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <div class="shareIcons">
 
                 <a target="_blank" href="http://www.youtube.com/user/NathanielKeefer">
-                    <i class="fa-brands fa-youtube-square"></i>
+                    <i class="fa-brands fa-youtube-square fa-3x"></i>
                 </a>
                 <a target="_blank" href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
-                    <i class="fa-brands fa-linkedin-square"></i>
+                    <i class="fa-brands fa-linkedin fa-3x"></i>
                 </a>
             </div>
             <div class="pull-right">
