--- a/media.html
+++ b/media.html
@@ -35,7 +35,7 @@
                     <i class="fa-brands fa-youtube-square"></i>
                 </a>
                 <a target="_blank" href="https://ca.linkedin.com/in/nathaniel-keefer-573921134">
-                    <i class="fa-brands fa-linkedin-square"></i>
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </div>
             <div class="pull-right">
